--- a/index.css
+++ b/index.css
@@ -2,4 +2,7 @@
     margin: 0;
     padding: 0;
     background-color: cyan;
+    border: 2px solid green;
+    font-size: 24px;
+    font-color: blue;
 }
