--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
     background-color: cyan;
     border: 2px solid green;
     font-size: 24px;
-    color: blue;
+    color:darkkhaki;
 }
 .sapaan{
     font-size: 16px;
